fix center alignment in safari.

--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -84,7 +84,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 // Parent page
 .intro-text {
-  margin: 3em inherit;
+  margin: 3em auto;
 }
 
 // Text blocks
